# agentic-fica-auditor

./: .env.example  .gitignore  Dockerfile  README.md  compliance.db  pyproject.toml  render.yaml
backend/: Makefile  run.py
backend/app/: api.py  main.py  models.py
backend/app/agent/: engine.py  prompts.py  sandbox.py  tools.py
backend/app/fixtures/: adverse_media.json  cipc_registry.json  dha_registry.json  watchlist.json
backend/app/static/: index.html
backend/tests/: conftest.py  test_api.py  test_engine.py
backend/workspace/cases/CASE-KYB-16087F1C/: run_tool.py
backend/workspace/cases/CASE-KYB-171C420D/: run_tool.py
backend/workspace/cases/CASE-KYB-1C378DCA/: run_tool.py
backend/workspace/cases/CASE-KYB-20BECA6F/: run_tool.py
backend/workspace/cases/CASE-KYB-51422D4F/: run_tool.py
backend/workspace/cases/CASE-KYB-99859392/: run_tool.py
backend/workspace/cases/CASE-KYB-ACAF16F9/: run_tool.py
backend/workspace/cases/CASE-KYB-AFCFE1CC/: run_tool.py
backend/workspace/cases/CASE-KYC-099D4813/: run_tool.py
backend/workspace/cases/CASE-KYC-0B547C34/: run_tool.py
backend/workspace/cases/CASE-KYC-1C56FE77/: run_tool.py
backend/workspace/cases/CASE-KYC-2551F6B8/: run_tool.py
backend/workspace/cases/CASE-KYC-2A109125/: run_tool.py
frontend/: Makefile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AuditList.tsx  BatchForm.tsx  ComplianceGraph.tsx  KYBForm.tsx  KYCForm.tsx  ThinkingConsole.tsx
(+17 files in other folders)
